@@ -1,7 +1,5 @@
 package com.ia.core.service.dto.entity;
 
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
@@ -111,23 +109,11 @@ public abstract class AbstractBaseEntityDTO<T extends BaseEntity>
 
   @SuppressWarnings("javadoc")
   public static class CAMPOS {
-    private static final Set<String> fields = new HashSet<>();
-    public static final String ID = create("id");
-    public static final String VERSION = create("version");
-
-    public static String create(final String value) {
-      fields.add(value);
-      return value;
-    }
-
-    public static String create(final String context, final String value) {
-      String key = String.format("%s.%s", context, value);
-      fields.add(key);
-      return key;
-    }
+    public static final String ID = "id";
+    public static final String VERSION = "version";
 
     public static Set<String> values() {
-      return Collections.unmodifiableSet(fields);
+      return Set.of(ID, VERSION);
     }
   }
 
